css: 루트레이아웃으로 css 통일 - 이후 필요한 css 수정 작업

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
   :root {
     --background: #ffffff;
     --foreground: #171717;
-    --background-secondary: #ffffff;
+    --background-secondary: #f7f7f7;
     --background-hover: #eeeded;
 
     --primary: #10b981;
